py3-flask-cors: set correct version in installed Python package
This should enable CVE scanners to detect the version we have installed
correctly.

--- a/py3-flask-cors.yaml
+++ b/py3-flask-cors.yaml
@@ -32,6 +32,12 @@ pipeline:
       repository: https://github.com/corydolphin/flask-cors
       tag: ${{package.version}}
 
+  - runs: |
+      # Update version before installation, per upstream's release scripting:
+      # https://github.com/corydolphin/flask-cors/blob/5da9be479b4fb203816bca9eb0cfb7add5eeceb5/.github/workflows/on-release-main.yml#L18-L21
+      sed -i "s/^version = \".*\"/version = \"${{package.version}}\"/" pyproject.toml
+      sed -i "s/__version__ .*/__version__ = \"${{package.version}}\"/" flask_cors/version.py
+
 subpackages:
   - range: py-versions
     name: py${{range.key}}-${{vars.pypi-package}}
