--- a/percona-server-9.0.yaml
+++ b/percona-server-9.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: percona-server-9.0
   version: 9.0.1.1
-  epoch: 1
+  epoch: 2
   description: "Percona Server for MySQL is a free, fully compatible, enhanced, and open source drop-in replacement for any MySQL database. It provides superior performance, scalability, and instrumentation."
   copyright:
     - license: GPL-3.0-or-later
@@ -30,7 +30,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - clang-extras
+      - clang-15-extras
       - cmake
       - curl-dev
       - icu-dev
