--- a/cilium-envoy-1.16.yaml
+++ b/cilium-envoy-1.16.yaml
@@ -53,10 +53,10 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/cilium/proxy
-      # Branch from https://github.com/cilium/cilium/blob/v1.16.5/images/cilium/Dockerfile
+      # Branch from https://github.com/cilium/cilium/blob/v${{package.version}}/images/cilium/Dockerfile
       # Note often the branch is updated with dependencies updates, no tags
       # See CILIUM_PROXY_COMMIT for anchor point
-      branch: v1.30
+      branch: v1.31
       depth: 1000
 
   - name: Get the CILIUM_PROXY_COMMIT and reset to it
@@ -64,11 +64,6 @@ pipeline:
       ENVOY_SHA=$(grep 'ARG.*cilium-envoy' ./cilium/images/cilium/Dockerfile \
         | sed "s/^ARG.*:v[0-9.]\+-[0-9]\+-//g" | cut -d@ -f1)
       git reset --hard $ENVOY_SHA
-
-  - uses: go/bump
-    with:
-      deps: |-
-        golang.org/x/net@v0.33.0
 
   - runs: |
       # Bazel errors out on toolchain stanza
