--- a/openssh.yaml
+++ b/openssh.yaml
@@ -22,6 +22,7 @@ environment:
       - openssl-dev
       - wolfi-baselayout
       - zlib-dev
+      - linux-pam-dev
 
 var-transforms:
   - from: ${{package.version}}
@@ -55,7 +56,8 @@ pipeline:
          --with-default-path='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin' \
          --with-privsep-user=sshd \
          --with-ssl-engine \
-         --with-libedit
+         --with-libedit \
+         --with-pam --with-pam-service=sshd
 
   - uses: autoconf/make
 
@@ -99,6 +101,17 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
           mv "${{targets.destdir}}"/usr/lib/ssh/sftp-server "${{targets.subpkgdir}}"/usr/lib/ssh/
+  
+  - name: "openssh-server-pam"
+    description: "OpenSSH PAM server"
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
+          mkdir -p "${{targets.subpkgdir}}"/etc/pam.d
+          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
+          install -m755 sshd ${{targets.subpkgdir}}/usr/sbin/sshd.pam
+          install -m755 sshd-session ${{targets.subpkgdir}}/usr/lib/ssh/sshd-session.pam
+          install -Dm644 ${{targets.subpkgdir}}/usr/sbin/sshd.pam ${{targets.subpkgdir}}/etc/pam.d/sshd
 
   - name: "openssh-pkcs11-helper"
     description: "PKCS11 helper for OpenSSH"
