made some edits to the package version and update block since upstream doesn't have any active releases/tags available - ty @kranurag7
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/sftp.yaml
+++ b/sftp.yaml
@@ -1,6 +1,6 @@
 package:
   name: sftp
-  version: "9.9_p2"
+  version: 0.0.0_git20250224
   epoch: 0
   description: Secure File Transfer Protocol (SFTP) server based on OpenSSH
   copyright:
@@ -29,7 +29,7 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/atmoz/sftp
-      expected-commit: 46a8b3db48a99257249a79fcbdf1cd9f666e161b  # Last active commit on 2024-09-14
+      branch: master
 
   - runs: |
       mkdir -p ${{targets.contextdir}}/etc/ssh
@@ -65,4 +65,8 @@ test:
         EOF
 
 update:
-  enabled: false
+  enabled: true
+  git: {}
+  schedule:
+    period: weekly
+    reason: This project doesn't do releases and everything is commit based
