tw: Fix typo in comment block
Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/tw.yaml
+++ b/tw.yaml
@@ -73,7 +73,7 @@ subpackages:
 #       no-provides: true
 #     pipeline:
 #       - runs: |
-#           make -C ${{range.key}} MELANGE_CONTEXDIR=${{targets.contextdir}} melange-install
+#           make -C ${{range.key}} MELANGE_CONTEXTDIR=${{targets.contextdir}} melange-install
 update:
   enabled: true
   github:
