--- a/spdlog.yaml
+++ b/spdlog.yaml
@@ -1,7 +1,7 @@
 package:
   name: spdlog
   version: "1.15.1"
-  epoch: 0
+  epoch: 1
   description: Fast C++ logging library.
   copyright:
     - license: MIT
@@ -47,6 +47,9 @@ subpackages:
   - name: ${{package.name}}-dev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 test:
   environment:
