add ldd-check test
Signed-off-by: Luca Di Maio <luca.dimaio1@gmail.com>

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -126,6 +126,11 @@ subpackages:
           install -m755 ./docker-entrypoint.sh "${{targets.subpkgdir}}/usr/bin/docker-entrypoint.sh"
           mkdir -p "${{targets.subpkgdir}}/usr/src/app"
           ln -s "/usr/bin/docker-entrypoint.sh" "${{targets.subpkgdir}}/usr/src/app/docker-entrypoint.sh"
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 update:
   enabled: true
