--- a/kmod.yaml
+++ b/kmod.yaml
@@ -69,6 +69,7 @@ subpackages:
     description: kmod manpages
 
   - name: kmod-libs
+    description: kmod libs
     pipeline:
       - runs: tree ${{targets.destdir}}
       - runs: |
@@ -76,10 +77,9 @@ subpackages:
           mv ${{targets.destdir}}/usr/lib/libkmod.so* ${{targets.subpkgdir}}/usr/lib/
     test:
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
-            packages: $(basename ${{targets.contextdir}})
-    description: kmod libs
+            packages: ${{subpkg.name}}
 
   - name: kmod-dev
     pipeline:
