use test/tw/ldd-check

--- a/fluent-bit-3.2.yaml
+++ b/fluent-bit-3.2.yaml
@@ -125,6 +125,6 @@ test:
         fluent-bit --version
         fluent-bit --help
         luajit -v
-    - uses: test/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: ${{package.name}}
