update ceph package version to 19.2.1 and adjust dependencies for compatibility

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -1,6 +1,6 @@
 package:
   name: ceph
-  version: 17.2.8
+  version: 19.2.1
   description: Distributed object, block, and file storage
   copyright:
     - license: LGPL-2.1
@@ -13,7 +13,7 @@ package:
       - libstdc++
       - libudev
       - openssl
-      - python-3.13
+      - python-3.11
       - zlib
 
 environment:
@@ -21,35 +21,29 @@ environment:
     packages:
       - autoconf
       - automake
-      - babeltrace-2
       - bash
-      - bison
       - boost-dev
+      - bison
       - build-base
-      - busybox
+      - wolfi-base
       - cmake
+      - keyutils-dev
       - cryptsetup-dev
       - curl-dev
+      - py3.11-setuptools
       - eudev
       - expat-dev
+      - ncurses-dev
+      - libnl3-dev
       - flex
-      - gcc
-      - gettext
-      - glib-dev
       - gperf
-      - graphviz
-      - jaeger
-      - keyutils-dev
-      - krb5-dev
       - libaio-dev
       - libcap-ng-dev
       - libedit-dev
-      - libnl3-dev
       - libtirpc-dev
       - libtool
-      - lttng-ust-dev
       - lttng-ust-tools
-      - lua5.3-dev
+      - lua5.4-dev
       - lz4-dev
       - make
       - nasm
@@ -61,42 +55,86 @@ environment:
       - openssl-dev
       - pkgconf
       - posix-libc-utils
-      - py3.13-cython
-      - py3.13-pyyaml
-      - py3.13-setuptools
-      - py3.13-sphinx
-      - python-3.13-dev
+
+      - py3.11-pyyaml
+      - py3.11-cython
+      - python-3.11-dev
       - snappy-dev
       - systemd-dev
       - util-linux-dev
       - xfsprogs
+
       - yaml-cpp-dev
       - zlib-dev
+      - fuse3-dev
+      - liburing-dev
+      - doxygen
+      - librdkafka-dev
+      - icu-dev
+      - thrift-dev
+      - zstd-dev
+      - xfs-scrub
+      - py3.11-sphinx-bin
+      - jq
+      - libcap-dev
+      - re2-dev
+      - libxml2-dev
+      - swagger
+      - apache-arrow-dev
 
 pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/ceph/ceph.git
       tag: v${{package.version}}
-      expected-commit: f817ceb7f187defb1d021d6328fa833eb8e943b3
+      expected-commit: 58a7fab8be0a062d730ad7da874972fd3fba59fb
       recurse-submodules: true
 
-  - uses: cmake/configure
+  - uses: patch
     with:
-      opts: |
-        -DWITH_RADOSGW=OFF \
-        -DWITH_FUSE=OFF \
-        -DWITH_MANPAGE=OFF \
-        -DWITH_RDMA=OFF \
+      patches: fix-submodule.patch
+  - runs: |
+      cmake -B build -G Ninja -Wno-dev \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DCMAKE_INSTALL_LOCALSTATEDIR=/var \
+        -DPython3_LIBRARIES=/usr/lib/python3.11 \
+        -DCMAKE_INSTALL_SYSCONFDIR=/etc \
+        -DNINJA_MAX_COMPILE_JOBS=$JOBS \
+        -DALLOCATOR=libc \
+        -DWITH_GTEST_PARALLEL=ON \
+        -DWITH_PYTHON3=3.11 \
+        -DENABLE_GIT_VERSION=OFF \
+        -DLUA_LIBRARIES=/usr/lib/lua5.4/liblua.a \
         -DWITH_BABELTRACE=OFF \
-        -DLUA_LIBRARIES=/usr/lib/lua5.3 \
-        -DCYTHON_VERSION=3.0.11 \
-        -DWITH_SYSTEM_BOOST=ON \
-        -DWITH_SYSTEM_NPM=ON
+        -DWITH_JAEGER=OFF \
+        -DWITH_LTTNG=OFF \
+        -DWITH_MANPAGE=ON \
+        -DWITH_RADOSGW_AMQP_ENDPOINT=OFF \
+        -DWITH_RADOSGW_SELECT_PARQUET=ON \
+        -DWITH_RADOSGW_POSIX=OFF \
+        -DWITH_RDMA=OFF \
+        -DWITH_REENTRANT_STRSIGNAL=ON \
+        -DWITH_SEASTAR=OFF \
+        -DWITH_SPDK=OFF \
+        -DWITH_SYSTEMD=ON \
+        -DWITH_CEPHFS_SHELL=ON \
+        -DWITH_SYSTEM_ARROW=ON \
+        -DWITH_SYSTEM_BOOST=OFF \
+        -DWITH_SYSTEM_FMT=OFF \
+        -DWITH_SYSTEM_LIBURING=ON \
+        -DWITH_SYSTEM_NPM=ON \
+        -DWITH_SYSTEM_ROCKSDB=OFF \
+        -DWITH_SYSTEM_ZSTD=ON \
+        -DWITH_QATLIB=OFF \
+        -DWITH_QATZIP=OFF \
+        -DWITH_TESTS="$(want_check && echo ON || echo OFF)" \
+        -DWITH_THREAD_SAFE_RES_QUERY=ON
 
-  - uses: cmake/build
 
-  - uses: cmake/install
+  - runs: cmake --build build --target common-options-objs
+  - runs: cmake --build build
+  - runs: cmake --install build
 
   - uses: strip
 
