use test/tw/ldd-check

--- a/trino.yaml
+++ b/trino.yaml
@@ -163,9 +163,9 @@ subpackages:
           EOF
     test:
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
-            packages: ${{package.name}}
+            packages: ${{subpkg.name}}
 
   - range: plugins
     name: trino-plugin-${{range.key}}
@@ -203,7 +203,7 @@ test:
     - runs: |
         trino --version
         trino --help
-    - uses: test/ldd-check
+    - uses: test/tw/ldd-check
       with:
         packages: ${{package.name}}
     - name: "test trino server"
