mosquitto - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/mosquitto.yaml
+++ b/mosquitto.yaml
@@ -55,6 +55,10 @@ pipeline:
         WITH_CJSON=yes \
         install
 
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mv "${{targets.destdir}}"/usr/sbin/* "${{targets.destdir}}"/usr/bin
+      rmdir "${{targets.destdir}}"/usr/sbin
+
   - uses: strip
 
 subpackages:
@@ -160,7 +164,7 @@ test:
         EOF
 
         # Switch to the mosquitto user and start the Mosquitto broker
-        /docker-entrypoint.sh /usr/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf &
+        /docker-entrypoint.sh /usr/bin/mosquitto -c /etc/mosquitto/mosquitto.conf &
 
         # Wait for a moment to ensure Mosquitto has started
         sleep 2
