update ceph package dependencies for enhanced compatibility and streamline build pipeline

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -19,34 +19,41 @@ package:
 environment:
   contents:
     packages:
+      - apache-arrow-dev
       - autoconf
       - automake
       - bash
-      - boost-dev
       - bison
+      - boost-dev
       - build-base
-      - wolfi-base
       - cmake
-      - keyutils-dev
       - cryptsetup-dev
       - curl-dev
-      - py3.11-setuptools
+      - doxygen
       - eudev
       - expat-dev
-      - ncurses-dev
-      - libnl3-dev
       - flex
+      - fuse3-dev
       - gperf
+      - icu-dev
+      - jq
+      - keyutils-dev
       - libaio-dev
+      - libcap-dev
       - libcap-ng-dev
       - libedit-dev
+      - libnl3-dev
+      - librdkafka-dev
       - libtirpc-dev
       - libtool
+      - liburing-dev
+      - libxml2-dev
       - lttng-ust-tools
       - lua5.4-dev
       - lz4-dev
       - make
       - nasm
+      - ncurses-dev
       - ninja
       - nodejs
       - npm
@@ -55,31 +62,23 @@ environment:
       - openssl-dev
       - pkgconf
       - posix-libc-utils
-
-      - py3.11-pyyaml
       - py3.11-cython
+      - py3.11-pyyaml
+      - py3.11-setuptools
+      - py3.11-sphinx-bin
       - python-3.11-dev
+      - re2-dev
       - snappy-dev
+      - swagger
       - systemd-dev
+      - thrift-dev
       - util-linux-dev
+      - wolfi-base
+      - xfs-scrub
       - xfsprogs
-
       - yaml-cpp-dev
       - zlib-dev
-      - fuse3-dev
-      - liburing-dev
-      - doxygen
-      - librdkafka-dev
-      - icu-dev
-      - thrift-dev
       - zstd-dev
-      - xfs-scrub
-      - py3.11-sphinx-bin
-      - jq
-      - libcap-dev
-      - re2-dev
-      - libxml2-dev
-      - swagger
       - apache-arrow-dev
 
 pipeline:
@@ -93,6 +92,7 @@ pipeline:
   - uses: patch
     with:
       patches: fix-submodule.patch
+
   - runs: |
       cmake -B build -G Ninja -Wno-dev \
         -DCMAKE_BUILD_TYPE=Release \
@@ -131,9 +131,10 @@ pipeline:
         -DWITH_TESTS="$(want_check && echo ON || echo OFF)" \
         -DWITH_THREAD_SAFE_RES_QUERY=ON
 
-
   - runs: cmake --build build --target common-options-objs
+
   - runs: cmake --build build
+
   - runs: cmake --install build
 
   - uses: strip
