multipath-tools - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/multipath-tools.yaml
+++ b/multipath-tools.yaml
@@ -34,11 +34,11 @@ pipeline:
 
   - uses: autoconf/make
     with:
-      opts: LIB=/lib exec_prefix=/usr
+      opts: LIB=/lib exec_prefix=/usr bindir=/usr/bin
 
   - uses: autoconf/make-install
     with:
-      opts: LIB=/lib exec_prefix=/usr
+      opts: LIB=/lib exec_prefix=/usr bindir=/usr/bin
 
   - uses: strip
 
@@ -64,7 +64,7 @@ test:
         # note that functional tests would take much more complexity
         multipath -h
         mpathpersist -h
-        [ -x /usr/sbin/kpartx ]
+        [ -x /usr/bin/kpartx ]
     - uses: test/pkgconf
     - uses: test/ldd-check
       with:
