mtr - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/mtr.yaml
+++ b/mtr.yaml
@@ -36,10 +36,12 @@ pipeline:
       export GIT_DIR="."
       cd ./curses
       ../configure --prefix=/usr \
+        --sbindir=/usr/bin \
       	--without-gtk
       make
       cd ../gtk
       ../configure --prefix=/usr \
+        --sbindir=/usr/bin \
       	--with-gtk \
       	--program-suffix=-gtk
       make
@@ -70,8 +72,8 @@ subpackages:
     description: "The GTK+ interface for ${{package.name}}"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin "${{targets.subpkgdir}}"/usr/share
-          mv "${{targets.destdir}}"/usr/sbin/mtr*-gtk "${{targets.subpkgdir}}"/usr/sbin/
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin "${{targets.subpkgdir}}"/usr/share
+          mv "${{targets.destdir}}"/usr/bin/mtr*-gtk "${{targets.subpkgdir}}"/usr/bin/
           mv "${{targets.destdir}}"/usr/share/applications "${{targets.subpkgdir}}"/usr/share/
           mv "${{targets.destdir}}"/usr/share/pixmaps "${{targets.subpkgdir}}"/usr/share/
     test:
