nftables - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/nftables.yaml
+++ b/nftables.yaml
@@ -35,6 +35,9 @@ pipeline:
       uri: https://netfilter.org/projects/nftables/files/nftables-${{package.version}}.tar.xz
 
   - uses: autoconf/configure
+    with:
+      opts: |
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
