remove apache-arrow-dev dependency and set C++ standard to 17 in ceph.yaml

--- a/ceph.yaml
+++ b/ceph.yaml
@@ -79,7 +79,6 @@ environment:
       - yaml-cpp-dev
       - zlib-dev
       - zstd-dev
-      - apache-arrow-dev
 
 pipeline:
   - uses: git-checkout
@@ -97,6 +96,7 @@ pipeline:
       cmake -B build -G Ninja -Wno-dev \
         -DCMAKE_BUILD_TYPE=Release \
         -DCMAKE_INSTALL_PREFIX=/usr \
+        -DCMAKE_CXX_STANDARD=17 \
         -DCMAKE_INSTALL_LOCALSTATEDIR=/var \
         -DPython3_LIBRARIES=/usr/lib/python3.11 \
         -DCMAKE_INSTALL_SYSCONFDIR=/etc \
