chore(clang-15): Stream subpackages (#43534)
Currently, subpackages do not account for the version of Clang. Stream
them to avoid conflicts with an upcoming LLVM refactor

---------

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/percona-server-9.1.yaml
+++ b/percona-server-9.1.yaml
@@ -30,7 +30,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      - clang-extras
+      - clang-15-extras
       - cmake
       - curl-dev
       - icu-dev
