--- a/clang-15.yaml
+++ b/clang-15.yaml
@@ -1,7 +1,7 @@
 package:
   name: clang-15
   version: 15.0.7
-  epoch: 4
+  epoch: 5
   description: "C language family frontend for LLVM"
   copyright:
     - license: Apache-2.0
@@ -139,7 +139,7 @@ subpackages:
       runtime:
         - libLLVM-15
 
-  - name: "clang-analyzer"
+  - name: "clang-15-analyzer"
     description: "Clang 15 analyzer"
     pipeline:
       - runs: |
@@ -167,7 +167,7 @@ subpackages:
         - runs: |
             scan-build --help
 
-  - name: "clang-extras"
+  - name: "clang-15-extras"
     description: "Clang 15 extras"
     pipeline:
       - runs: |
@@ -288,7 +288,7 @@ subpackages:
             clang-cpp --version
             clang-cpp --help
 
-  - name: "py3-clang"
+  - name: "py3-clang-15"
     description: "Clang 15 Python bindings"
     pipeline:
       - runs: |
