nsd - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/nsd.yaml
+++ b/nsd.yaml
@@ -39,7 +39,9 @@ pipeline:
 
   - uses: autoconf/configure
     with:
-      opts: CC=/usr/bin/gcc
+      opts: |
+        CC=/usr/bin/gcc \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
