--- a/net-snmp.yaml
+++ b/net-snmp.yaml
@@ -35,6 +35,7 @@ pipeline:
       	--build=$CBUILD \
       	--host=$CHOST \
       	--prefix=/usr \
+      	--sbindir=/usr/bin \
       	--sysconfdir=/etc \
       	--mandir=/usr/share/man \
       	--infodir=/usr/share/info \
@@ -160,8 +161,13 @@ subpackages:
   - name: net-snmp-tools
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr
-          mv "${{targets.destdir}}"/usr/bin "${{targets.subpkgdir}}"/usr
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          for i in "${{targets.destdir}}"/usr/bin/*; do
+            case "${i##*/}" in
+              snmpd|snmptrapd) ;;
+              *) mv "$i" ${{targets.subpkgdir}}/usr/bin ;;
+            esac
+          done
     description: Network management utilities using SNMP
     test:
       pipeline:
