nvme-cli - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/nvme-cli.yaml
+++ b/nvme-cli.yaml
@@ -25,7 +25,8 @@ pipeline:
     with:
       opts: |
         -Ddocs=man \
-        -Dudevrulesdir=/usr/lib/udev/rules.d/
+        -Dudevrulesdir=/usr/lib/udev/rules.d/ \
+        -Dsbindir=/usr/bin
 
   - uses: meson/compile
 
