--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -1,7 +1,7 @@
 package:
   name: kube-state-metrics
   version: "2.15.0"
-  epoch: 1
+  epoch: 2
   description: Add-on agent to generate and expose cluster-level metrics.
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - tzdata
 
 pipeline:
   - uses: git-checkout
