--- a/openssh.yaml
+++ b/openssh.yaml
@@ -110,7 +110,7 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/etc/pam.d
           mkdir -p "${{targets.subpkgdir}}"/usr/sbin
           install -m755 sshd ${{targets.subpkgdir}}/usr/sbin/sshd.pam
-          install -m755 sshd-session ${{targets.subpkgdir}}/usr/lib/ssh/sshd-session.pam
+          install -m755 sshd-session ${{targets.subpkgdir}}/usr/lib/ssh/sshd-session
           install -Dm644 ${{targets.subpkgdir}}/usr/sbin/sshd.pam ${{targets.subpkgdir}}/etc/pam.d/sshd
 
   - name: "openssh-pkcs11-helper"
