tested that sftp works by verifying file exists on the remote sftp server
Signed-off-by: Tina Pham <tina.pham@chainguard.dev>

--- a/sftp.yaml
+++ b/sftp.yaml
@@ -12,6 +12,8 @@ package:
       - openssh-server-pam
       - openssh-sftp-server
       - openssh-client  # Includes `sftp` command
+      - openssh-keygen
+      - posix-libc-utils # For `getent` command
 
 environment:
   contents:
@@ -20,10 +22,12 @@ environment:
       - busybox
       - ca-certificates-bundle
       - openssh-client
+      - openssh-keygen
       - openssl-dev
       - zlib-dev
       - libedit-dev
       - linux-pam-dev
+      - posix-libc-utils
 
 pipeline:
   - uses: git-checkout
@@ -48,20 +52,23 @@ test:
   pipeline:
     - name: Verify OpenSSH installation
       runs: |
-        ssh -V | grep -q "OpenSSH"
+        ssh -V 2>&1 | grep -q "OpenSSH"
 
     - name: Verify SFTP entrypoint
       runs: |
-        chmod +x /entrypoint
-        /entrypoint --help
-
-    - name: SFTP basic test
+        apk add wait-for-it
+        groupadd users || true  # This creates the group if it doesn't exist
+        /entrypoint foo:pass:::upload & wait-for-it localhost:22
+        netstat -tan | grep ':22'
+    
+    - name: Upload and verify file exists on the remote SFTP server
       runs: |
-        /usr/sbin/sshd.pam -D &
-        sleep 5
-        sftp -o StrictHostKeyChecking=no test@localhost <<EOF
-        ls
-        exit
+        apk add sshpass
+        echo "test file" > /tmp/test.txt
+        sshpass -p "pass" sftp -o StrictHostKeyChecking=no -P 22 foo@127.0.0.1 <<EOF
+          put /tmp/test.txt upload/test.txt
+          ls upload/test.txt && echo "File uploaded successfully" ||  { echo "File upload failed"; exit 1; }
+          exit
         EOF
 
 update:
