--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -3,6 +3,9 @@ package:
   version: "2.15.0"
   epoch: 2
   description: Add-on agent to generate and expose cluster-level metrics.
+  dependencies:
+    runtime:
+      - tzdata
   copyright:
     - license: Apache-2.0
 
@@ -13,7 +16,6 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
-      - tzdata
 
 pipeline:
   - uses: git-checkout
