--- a/paxmark.yaml
+++ b/paxmark.yaml
@@ -26,7 +26,7 @@ pipeline:
 
   - runs: |
       cargo auditable build --release
-      install -Dm755 target/release/paxmark "${{targets.destdir}}"/usr/sbin/paxmark
+      install -Dm755 target/release/paxmark "${{targets.destdir}}"/usr/bin/paxmark
 
 update:
   enabled: true
