openvpn - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/openvpn.yaml
+++ b/openvpn.yaml
@@ -48,6 +48,7 @@ pipeline:
       opts: |
         --prefix=/usr \
         --host=${{host.triplet.gnu}} \
+        --sbindir=/usr/bin \
         --sysconfdir=/etc/openvpn \
         --mandir=/usr/share/man \
         --enable-iproute2 \
