parted - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/parted.yaml
+++ b/parted.yaml
@@ -41,6 +41,8 @@ pipeline:
   - runs: ./bootstrap
 
   - uses: autoconf/configure
+    with:
+      opts: --sbindir=/usr/bin
 
   - uses: autoconf/make
 
