openssh - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/openssh.yaml
+++ b/openssh.yaml
@@ -41,6 +41,7 @@ pipeline:
          --host=${{host.triplet.gnu}} \
          --target=${{host.triplet.gnu}} \
          --prefix=/usr \
+         --sbindir=/usr/bin \
          --datadir=/usr/share \
          --sysconfdir=/etc/ssh \
          --libexecdir=/usr/lib/ssh \
@@ -114,6 +115,28 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
           mv "${{targets.destdir}}"/usr/lib/ssh/ssh-sk-helper "${{targets.subpkgdir}}"/usr/lib/ssh/
 
+  - name: "openssh-server"
+    description: "OpenSSH server"
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mv "${{targets.destdir}}"/usr/bin/sshd "${{targets.subpkgdir}}"/usr/bin/
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
+          mv "${{targets.destdir}}"/usr/lib/ssh/sshd-session "${{targets.subpkgdir}}"/usr/lib/ssh/
+    dependencies:
+      runtime:
+        - openssh-keygen
+        - openssh-server-config
+    scriptlets:
+      post-install: |
+        #!/bin/sh
+        ssh-keygen -A -q -N ""
+    test:
+      pipeline:
+        - runs: |
+            ssh-keygen -A -q -N ""    # This is unfortunate, but scriplets don't run in test environments, so force this here
+            /usr/bin/sshd
+
   - name: "openssh-client"
     description: "OpenSSH client"
     pipeline:
@@ -137,28 +160,6 @@ subpackages:
             trap "rm -f $conf" EXIT
             echo "Tag YouAreIt" > "$conf"
             ssh -G _ | grep -i '^Tag YouAreIt$'
-
-  - name: "openssh-server"
-    description: "OpenSSH server"
-    pipeline:
-      - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mv "${{targets.destdir}}"/usr/sbin/sshd "${{targets.subpkgdir}}"/usr/sbin/
-          mkdir -p "${{targets.subpkgdir}}"/usr/lib/ssh
-          mv "${{targets.destdir}}"/usr/lib/ssh/sshd-session "${{targets.subpkgdir}}"/usr/lib/ssh/
-    dependencies:
-      runtime:
-        - openssh-keygen
-        - openssh-server-config
-    scriptlets:
-      post-install: |
-        #!/bin/sh
-        ssh-keygen -A -q -N ""
-    test:
-      pipeline:
-        - runs: |
-            ssh-keygen -A -q -N ""    # This is unfortunate, but scriplets don't run in test environments, so force this here
-            /usr/sbin/sshd
 
   - name: "openssh-service"
     description: "System OpenSSH server unit"
@@ -206,4 +207,4 @@ test:
   pipeline:
     - runs: |
         ssh-keygen -A -q -N ""    # This is unfortunate, but scriplets don't run in test environments, so force this here
-        /usr/sbin/sshd
+        /usr/bin/sshd
