pciutils - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/pciutils.yaml
+++ b/pciutils.yaml
@@ -38,6 +38,7 @@ pipeline:
         SHARED=yes \
         SHAREDIR="${{targets.destdir}}"/usr/share/hwdata \
         MANDIR="${{targets.destdir}}"/usr/share/man \
+        SBINDIR="${{targets.destdir}}"/usr/bin \
         install
 
       install -d "${{targets.destdir}}"/usr/lib
@@ -49,7 +50,7 @@ pipeline:
       done
 
       # this is now supplied by the hwids package
-      rm -rf "${{targets.destdir}}"/usr/sbin/update-pciids
+      rm -rf "${{targets.destdir}}"/usr/bin/update-pciids
       rm -rf "${{targets.destdir}}"/usr/share/man/man8/update-pciids.8
       rm -rf "${{targets.destdir}}"/usr/share/hwdata
 
