pcsc-lite - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/pcsc-lite.yaml
+++ b/pcsc-lite.yaml
@@ -34,6 +34,7 @@ pipeline:
     with:
       opts: |
         -Dpolkit=false \
+        -Dsbindir=/usr/bin \
         -Dlibsystemd=false \
 
   - uses: meson/compile
