--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -1,8 +1,11 @@
 package:
   name: kube-state-metrics
   version: "2.15.0"
-  epoch: 1
+  epoch: 2
   description: Add-on agent to generate and expose cluster-level metrics.
+  dependencies:
+    runtime:
+      - tzdata
   copyright:
     - license: Apache-2.0
 
