--- a/procps.yaml
+++ b/procps.yaml
@@ -24,6 +24,7 @@ pipeline:
   - runs: |
       env FORCE_UNSAFE_CONFIGURE=1 ./configure \
          --prefix=/usr \
+         --sbindir=/usr/bin \
          --libexecdir=/usr/libexec \
          --sysconfdir=/etc \
          --mandir=/usr/share/man \
