openldap - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/openldap.yaml
+++ b/openldap.yaml
@@ -48,6 +48,7 @@ pipeline:
         --build=${{host.triplet.gnu}} \
         --target=${{host.triplet.gnu}} \
         --prefix=/usr \
+        --sbindir=/usr/bin \
         --libexecdir=/usr/lib \
         --sysconfdir=/etc \
         --mandir=/usr/share/man \
@@ -141,10 +142,10 @@ pipeline:
       rmdir var/lib/openldap/run
 
       # Fix tools symlinks to slapd.
-      find usr/sbin/ -type l -exec ln -sf slapd {} \;
+      find usr/bin/ -type l -exec ln -sf slapd {} \;
 
-      # Move executables from lib to sbin.
-      mv usr/lib/slapd usr/lib/lloadd usr/sbin/
+      # Move executables from lib to bin.
+      mv usr/lib/slapd usr/lib/lloadd usr/bin/
 
       # Move *.default configs to docs.
       mkdir -p usr/share/doc/${{package.name}}
@@ -258,19 +259,21 @@ subpackages:
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc/openldap
-          mkdir -p ${{targets.subpkgdir}}/usr/sbin
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
           mkdir -p ${{targets.subpkgdir}}/var/lib/openldap
 
           mv ${{targets.destdir}}/etc/openldap/lloadd.conf ${{targets.subpkgdir}}/etc/openldap
-          mv ${{targets.destdir}}/usr/sbin/lloadd ${{targets.subpkgdir}}/usr/sbin
+          mv ${{targets.destdir}}/usr/bin/lloadd ${{targets.subpkgdir}}/usr/bin
           mv ${{targets.destdir}}/var/lib/openldap/openldap-lloadd ${{targets.subpkgdir}}/var/lib/openldap
     description: Standalone LDAP Load Balancer Daemon
 
   - name: openldap-clients
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/usr
-          mv ${{targets.destdir}}/usr/bin ${{targets.subpkgdir}}/usr/
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          for i in ldapadd ldapcompare ldapdelete ldapexop ldapmodify ldapmodrdn ldappasswd ldapsearch ldapurl ldapvc ldapwhoami; do
+            mv "${{targets.destdir}}"/usr/bin/$i "${{targets.subpkgdir}}"/usr/bin/
+          done
     description: LDAP client utilities
     test:
       pipeline:
