quota-tools - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/quota-tools.yaml
+++ b/quota-tools.yaml
@@ -24,6 +24,8 @@ pipeline:
       uri: https://downloads.sourceforge.net/sourceforge/linuxquota/quota-${{package.version}}.tar.gz
 
   - uses: autoconf/configure
+    with:
+      opts: --sbindir=/usr/bin
 
   - uses: autoconf/make
 
