--- a/tdb.yaml
+++ b/tdb.yaml
@@ -1,10 +1,22 @@
 package:
   name: tdb
   version: "1.4.13"
-  epoch: 0
+  epoch: 1
   description: The tdb library
   copyright:
     - license: LGPL-3.0-or-later
+
+vars:
+  pypi-package: tdb
+  import: tdb
+
+data:
+  - name: py-versions
+    items:
+      3.10: "310"
+      3.11: "311"
+      3.12: "312"
+      3.13: "313"
 
 environment:
   contents:
@@ -14,8 +26,8 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - py3-supported-build-base-dev
       - python3
-      - python3-dev
 
 pipeline:
   - uses: fetch
@@ -40,11 +52,62 @@ subpackages:
       pipeline:
         - uses: test/pkgconf
 
-  - name: py3-tdb
+  - range: py-versions
+    name: py${{range.key}}-${{vars.pypi-package}}
+    description: python${{range.key}} version of ${{vars.pypi-package}}
+    dependencies:
+      provider-priority: ${{range.value}}
+      provides:
+        - py3-${{vars.pypi-package}}
     pipeline:
+      - uses: autoconf/configure
+        with:
+          opts: |
+            PYTHON=python${{range.key}} \
+            PYTHON3=python${{range.key}}
+      - uses: autoconf/make
+      - uses: autoconf/make-install
       - runs: |
-          mkdir -p "${{targets.contextdir}}"/usr/lib
-          mv "${{targets.destdir}}"/usr/lib/python3* "${{targets.contextdir}}"/usr/lib/
+          savedir="${{targets.contextdir}}.sav"
+          mkdir -p "$savedir/usr/lib"
+          mv "${{targets.contextdir}}"/usr/lib/python${{range.key}} "$savedir/usr/lib"
+          rm -rf "${{targets.contextdir}}"
+          mv "$savedir" "${{targets.contextdir}}"
+      - uses: strip
+    test:
+      pipeline:
+        - uses: python/import
+          with:
+            python: python${{range.key}}
+            import: ${{vars.import}}
+
+  - name: py3-supported-${{vars.pypi-package}}
+    description: meta package providing ${{vars.pypi-package}} for supported python versions.
+    dependencies:
+      runtime:
+        - py3.10-${{vars.pypi-package}}
+        - py3.11-${{vars.pypi-package}}
+        - py3.12-${{vars.pypi-package}}
+        - py3.13-${{vars.pypi-package}}
+    test:
+      pipeline:
+        - uses: test/emptypackage
+        - uses: python/import
+          with:
+            python: python3.10
+            import: ${{vars.import}}
+        - uses: python/import
+          with:
+            python: python3.11
+            import: ${{vars.import}}
+        - uses: python/import
+          with:
+            python: python3.12
+            import: ${{vars.import}}
+        - uses: python/import
+          with:
+            python: python3.13
+            import: ${{vars.import}}
 
 update:
   enabled: true
