powertop - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/powertop.yaml
+++ b/powertop.yaml
@@ -41,7 +41,8 @@ pipeline:
   - uses: autoconf/configure
     with:
       opts: |
-        --disable-nls
+        --disable-nls \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
