php-8.1 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/php-8.1.yaml
+++ b/php-8.1.yaml
@@ -71,6 +71,7 @@ pipeline:
       ./buildconf --force
       EXTENSION_DIR=/usr/lib/php/modules ./configure \
         --prefix=/usr \
+        --sbindir=/usr/bin \
         --libdir=/usr/lib/php \
         --datadir=/usr/share/php \
         --sysconfdir=/etc/php \
@@ -292,8 +293,8 @@ subpackages:
         - php-fpm=${{package.full-version}}
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/usr/sbin
-          mv ${{targets.destdir}}/usr/sbin/php-fpm ${{targets.subpkgdir}}/usr/sbin/
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/php-fpm ${{targets.subpkgdir}}/usr/bin/
 
   - name: ${{package.name}}-fpm-config
     description: PHP 8.1 FastCGI Process Manager (FPM) configuration
