--- a/ruby3.3-fluentd-1.17.yaml
+++ b/ruby3.3-fluentd-1.17.yaml
@@ -79,8 +79,8 @@ subpackages:
           git clone https://github.com/kube-logging/fluentd-images.git
           cd fluentd-images
           git checkout 773503fd12bcdb75f042ea3deb712ccb86a31d61
-          install -Dm755 ./v1.16/entrypoint.sh "${{targets.subpkgdir}}/bin/entrypoint.sh"
-          install -Dm755 ./v1.16/healthy.sh "${{targets.subpkgdir}}/bin/healthy.sh"
+          install -Dm755 ./v1.16/entrypoint.sh "${{targets.subpkgdir}}/usr/bin/entrypoint.sh"
+          install -Dm755 ./v1.16/healthy.sh "${{targets.subpkgdir}}/usr/bin/healthy.sh"
           install -Dm644 ./v1.16/fluent.conf "${{targets.subpkgdir}}/fluentd/etc/fluent.conf"
 
 update:
