rabbitmq-server-4.0 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/rabbitmq-server-4.0.yaml
+++ b/rabbitmq-server-4.0.yaml
@@ -45,22 +45,23 @@ pipeline:
         PREFIX=/usr \
         RMQ_ROOTDIR="/usr/lib/rabbitmq" \
         MANDIR=/usr/share/man \
+        SBINDIR=/usr/bin \
         PYTHON=python3
 
       # Copy all necessary lib files etc.
       install -p -m755 -D ./scripts/rabbitmq-server.ocf \
         "${{targets.contextdir}}"/usr/lib/ocf/resource.d/rabbitmq/rabbitmq-server
-      mkdir -p "${{targets.contextdir}}"/usr/sbin
+      mkdir -p "${{targets.contextdir}}"/usr/bin
 
       # Taken from the Alpine package, which borrowed from the Rabbitmq build steps.
       sed -e 's|@SU_RABBITMQ_SH_C@|su rabbitmq -s /bin/sh -c|' \
         < ./scripts/rabbitmq-script-wrapper \
-        > "${{targets.contextdir}}"/usr/sbin/rabbitmqctl
+        > "${{targets.contextdir}}"/usr/bin/rabbitmqctl
 
-      chmod 0755 "${{targets.contextdir}}"/usr/sbin/rabbitmqctl
+      chmod 0755 "${{targets.contextdir}}"/usr/bin/rabbitmqctl
       for script in rabbitmq-server rabbitmq-plugins rabbitmq-upgrade; do
-        cp -a "${{targets.contextdir}}"/usr/sbin/rabbitmqctl \
-          "${{targets.contextdir}}"/usr/sbin/$script;
+        cp -a "${{targets.contextdir}}"/usr/bin/rabbitmqctl \
+          "${{targets.contextdir}}"/usr/bin/$script;
       done
 
       mkdir -p "${{targets.contextdir}}"/usr/share/doc/"${{package.name}}"
