rpcbind - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/rpcbind.yaml
+++ b/rpcbind.yaml
@@ -18,7 +18,7 @@ package:
       mkdir -p /var
       [ -e /var/run ] || ln -sf ../run /var/run
       # And an rpc user
-      adduser -S -D -H -h /var/empty -s /sbin/nologin rpc 2>/dev/null
+      adduser -S -D -H -h /var/empty -s /bin/nologin rpc 2>/dev/null
       exit 0
 
 environment:
@@ -41,6 +41,7 @@ pipeline:
     with:
       opts: |
         --enable-warmstarts \
+        --sbindir=/usr/bin \
         --with-statedir=/var/lib/rpcbind \
         --with-rpcuser=rpc \
         --enable-debug \
