repmgr-17 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/repmgr-17.yaml
+++ b/repmgr-17.yaml
@@ -52,6 +52,8 @@ pipeline:
       expected-commit: c0d9dc6dac34c4cb60c3d8805842eed18cca4e85
 
   - uses: autoconf/configure
+    with:
+      opts: --sbindir=/usr/bin
 
   - uses: autoconf/make
 
