--- a/php-8.2.yaml
+++ b/php-8.2.yaml
@@ -67,6 +67,7 @@ pipeline:
       EXTENSION_DIR=/usr/lib/php/modules ./configure \
         --prefix=/usr \
         --libdir=/usr/lib/php \
+        --sbindir=/usr/bin \
         --datadir=/usr/share/php \
         --sysconfdir=/etc/php \
         --localstatedir=/var \
@@ -287,8 +288,8 @@ subpackages:
         - php-fpm=${{package.full-version}}
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/usr/sbin
-          mv ${{targets.destdir}}/usr/sbin/php-fpm ${{targets.subpkgdir}}/usr/sbin/
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/php-fpm ${{targets.subpkgdir}}/usr/bin/
 
   - name: ${{package.name}}-fpm-config
     description: PHP 8.2 FastCGI Process Manager (FPM) configuration
