php-8.3 - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/php-8.3.yaml
+++ b/php-8.3.yaml
@@ -72,6 +72,7 @@ pipeline:
       EXTENSION_DIR=/usr/lib/php/modules ./configure \
         --prefix=/usr \
         --libdir=/usr/lib/php \
+        --sbindir=/usr/bin \
         --datadir=/usr/share/php \
         --sysconfdir=/etc/php \
         --localstatedir=/var \
@@ -292,8 +293,8 @@ subpackages:
         - php-fpm=${{package.full-version}}
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/usr/sbin
-          mv ${{targets.destdir}}/usr/sbin/php-fpm ${{targets.subpkgdir}}/usr/sbin/
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/php-fpm ${{targets.subpkgdir}}/usr/bin/
 
   - name: ${{package.name}}-fpm-config
     description: PHP ${{vars.phpMM}} FastCGI Process Manager (FPM) configuration
