rrdtool - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/rrdtool.yaml
+++ b/rrdtool.yaml
@@ -145,10 +145,10 @@ subpackages:
   - name: rrdtool-cached
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin \
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin \
           	"${{targets.subpkgdir}}"/var/lib/rrdcached/db \
           	"${{targets.subpkgdir}}"/var/lib/rrdcached/journal
-          mv "${{targets.destdir}}"/usr/bin/rrdcached "${{targets.subpkgdir}}"/usr/sbin
+          mv "${{targets.destdir}}"/usr/bin/rrdcached "${{targets.subpkgdir}}"/usr/bin
     description: RRDtool data caching daemon
     dependencies:
       runtime:
