rtmpdump - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/rtmpdump.yaml
+++ b/rtmpdump.yaml
@@ -31,7 +31,7 @@ pipeline:
 
   - uses: autoconf/make-install
     with:
-      opts: prefix="/usr" libdir="/usr/lib"
+      opts: prefix="/usr" libdir="/usr/lib" sbindir="/usr/bin"
 
   - uses: strip
 
