rsyslog - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/rsyslog.yaml
+++ b/rsyslog.yaml
@@ -110,6 +110,7 @@ pipeline:
     with:
       opts: |
         --prefix=/usr \
+        --sbindir=/usr/bin \
         --enable-largefile \
         --enable-gssapi-krb5 \
         --enable-mysql \
