sshfs - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/sshfs.yaml
+++ b/sshfs.yaml
@@ -26,6 +26,8 @@ pipeline:
       expected-commit: f9fd288b1bd66a334ede19336e02b648c0853d24
 
   - uses: meson/configure
+    with:
+      opts: -Dsbindir=/usr/bin
 
   - uses: meson/compile
 
