tailscale - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/tailscale.yaml
+++ b/tailscale.yaml
@@ -30,7 +30,7 @@ pipeline:
   - runs: |
       install -Dm755 containerboot "${{targets.destdir}}"/usr/bin/containerboot
       install -Dm755 ${{package.name}} "${{targets.destdir}}"/usr/bin/${{package.name}}
-      install -Dm755 ${{package.name}}d "${{targets.destdir}}"/usr/sbin/${{package.name}}d
+      install -Dm755 ${{package.name}}d "${{targets.destdir}}"/usr/bin/${{package.name}}d
 
   - uses: strip
 
@@ -43,7 +43,7 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/local/sbin
           ln -sf /usr/bin/containerboot "${{targets.subpkgdir}}"/usr/local/bin/containerboot
           ln -sf /usr/bin/${{package.name}} "${{targets.subpkgdir}}"/usr/local/bin/${{package.name}}
-          ln -sf /usr/sbin/${{package.name}}d "${{targets.subpkgdir}}"/usr/local/sbin/${{package.name}}d
+          ln -sf /usr/bin/${{package.name}}d "${{targets.subpkgdir}}"/usr/local/sbin/${{package.name}}d
 
 update:
   enabled: true
