unbound - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/unbound.yaml
+++ b/unbound.yaml
@@ -30,6 +30,7 @@ pipeline:
   - uses: autoconf/configure
     with:
       opts: |
+        --sbindir=/usr/bin \
         --with-libevent \
         --with-expat \
         --enable-dnscrypt
