--- a/strongswan.yaml
+++ b/strongswan.yaml
@@ -65,6 +65,7 @@ pipeline:
     uses: autoconf/configure
     with:
       opts: |
+        --sbindir=/usr/bin \
         --with-ipsecdir=/usr/lib/strongswan \
         --with-capabilities=libcap \
         --with-user=ipsec \
