--- a/rabbitmq-server-4.0.yaml
+++ b/rabbitmq-server-4.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: rabbitmq-server-4.0
   version: "4.0.6"
-  epoch: 1
+  epoch: 2
   description: Open source RabbitMQ. core server and tier 1 (built-in) plugins
   copyright:
     - license: MPL-2.0
@@ -12,6 +12,7 @@ package:
       # rabbitmq-server is a wrapper shell script.
       - busybox
       - erlang-27
+      - posix-libc-utils
 
 environment:
   contents:
