--- a/k3s.yaml
+++ b/k3s.yaml
@@ -1,7 +1,7 @@
 package:
   name: k3s
   version: "1.32.1.1"
-  epoch: 1
+  epoch: 2
   description:
   copyright:
     - license: Apache-2.0
@@ -21,6 +21,7 @@ package:
       - mount
       - runc
       - umount
+      - tzdata # this is required for cronjobs with timezones to work.
       # Do not include runtime dependencies already included in the multicall k3s
       # - ctr
       # - crictl
