glibc: Run `make check`
Fixes: https://github.com/chainguard-dev/internal-dev/issues/9039

Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/glibc.yaml
+++ b/glibc.yaml
@@ -37,10 +37,12 @@ environment:
     keyring:
       - https://packages.wolfi.dev/bootstrap/stage3/wolfi-signing.rsa.pub
     packages:
+      - bash # needed by `make check`
       - bison
       - build-base
       - busybox
       - ca-certificates-bundle
+      - coreutils # needed by `make check`
       - flex
       - gawk
       - grep
@@ -112,6 +114,9 @@ pipeline:
 
   - runs: |
       make -C build -j$(nproc) install DESTDIR="${{targets.destdir}}"
+
+  - runs: |
+      make -C build -j$(nproc) check
 
   - name: "Set up ldconfig"
     runs: |
