--- a/grafana-operator.yaml
+++ b/grafana-operator.yaml
@@ -21,6 +21,31 @@ pipeline:
 
   - uses: strip
 
+subpackages:
+  - name: ${{package.name}}-bitnami-compat
+    description: "compat package with bitnami/grafana-operator non-fips image"
+    dependencies:
+      runtime:
+        - grafana-operator
+        - grafana-grafonnet
+        # Required by startup scripts
+        - busybox
+        - bash
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: grafana-operator
+          version-path: 5/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/grafana-operator/bin/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /usr/bin/grafana-operator ${{targets.subpkgdir}}/opt/bitnami/grafana-operator/bin/grafana-operator
+    test:
+      pipeline:
+        - runs: |
+            run-script --version
+            run-script --help
+
 update:
   enabled: true
   github:
