--- a/nginx-mainline.yaml
+++ b/nginx-mainline.yaml
@@ -2,7 +2,7 @@ package:
   name: nginx-mainline
   # Must also bump njs at the same time
   version: "1.27.4"
-  epoch: 0
+  epoch: 1
   description: HTTP and reverse proxy server (mainline version)
   copyright:
     - license: BSD-2-Clause
@@ -35,6 +35,12 @@ environment:
       - pkgconf
       - zeromq-dev
       - zlib-dev
+
+var-transforms:
+  - from: ${{package.version}}
+    match: ^(\d+).*
+    replace: $1
+    to: major-version
 
 data:
   - name: modules
@@ -246,6 +252,27 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/etc/nginx/conf.d
           install -m644 -D nginx.default.conf ${{targets.subpkgdir}}/etc/nginx/conf.d/
           ln -s /etc/nginx/conf.d/nginx.default.conf ${{targets.subpkgdir}}/etc/nginx/conf.d/default.conf
+
+  - name: nginx-bitnami-compat
+    description: "compat package with bitnami/keycloak image"
+    dependencies:
+      runtime:
+        - coreutils
+        - glibc-locale-en
+        - net-tools
+        - posix-libc-utils
+        - su-exec
+        - busybox
+        - curl
+        - bash
+        - sed
+        - grep
+        - glibc-locales
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: nginx
+          version-path: ${{vars.major-version}}/debian-12
 
 test:
   environment:
