--- a/ffmpeg.yaml
+++ b/ffmpeg.yaml
@@ -2,7 +2,7 @@
 package:
   name: ffmpeg
   version: 7.1
-  epoch: 5
+  epoch: 6
   description: ffmpeg multimedia library
   copyright:
     - license: GPL-3.0-or-later AND LGPL-3.0-or-later
@@ -66,6 +66,7 @@ pipeline:
       tag: n${{package.version}}
       cherry-picks: |
         master/099f88b8641dfc299f3896d17d9addc5b9ae7799: upstream patch fixes downstream package build of x265
+        master/d1ed5c06e3edc5f2b5f3664c80121fa55b0baa95: unbreak build with latest svtav1
 
   - runs: |
       ./configure \
