--- a/gcc-6.yaml
+++ b/gcc-6.yaml
@@ -1,7 +1,7 @@
 package:
   name: gcc-6
   version: 6.5.0
-  epoch: 5
+  epoch: 6
   description: "the GNU compiler collection"
   copyright:
     - license: GPL-3.0-or-later
@@ -13,6 +13,7 @@ package:
   dependencies:
     runtime:
       - binutils
+      - glibc-dev # Temporary workaround to force build-ordering against new glibc's
       - libstdc++-6-dev
 
 environment:
