--- a/stress-ng.yaml
+++ b/stress-ng.yaml
@@ -1,7 +1,7 @@
 package:
   name: stress-ng
   version: "0.18.10"
-  epoch: 0
+  epoch: 1
   description: "stress-ng will stress test a computer system in various selectable ways"
   copyright:
     - license: GPL-2.0-or-later
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - glibc-dev # Temporary workaround to force build-ordering against new glibc's
       - keyutils-dev
       - kmod-dev
       - libaio-dev
