--- a/selenium.yaml
+++ b/selenium.yaml
@@ -50,8 +50,8 @@ pipeline:
 
       # https://github.com/wolfi-dev/os/issues/34075
       bazel build \
-        --cxxopt=-fomit-frame-pointer \
-        --host_cxxopt=-fomit-frame-pointer \
+        --cxxopt="-fomit-frame-pointer" --cxxopt="-fdelete-null-pointer-checks" \
+        --host_cxxopt="-fomit-frame-pointer" --host_cxxopt="-fdelete-null-pointer-checks" \
         grid
       mkdir -p "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/usr/share/java/${{package.name}}/bin
