update package pipeline and add bitnami-compat
Signed-off-by: YashPimple <yashpimple22@gmail.com>

--- a/grafana-grafonnet.yaml
+++ b/grafana-grafonnet.yaml
@@ -1,7 +1,7 @@
 package:
   name: grafana-grafonnet
   version: 0.0_git20231114
-  epoch: 2
+  epoch: 3
   description: Jsonnet library for generating Grafana dashboards
   copyright:
     - license: Apache-2.0
@@ -29,11 +29,32 @@ pipeline:
       install -m755 *.json "${{targets.destdir}}"/opt/jsonnet/grafonnet/
 
       for i in clean custom raw; do
-        mkdir -p ${{targets.destdir}}/opt/jsonnet/grafonnet/$i
-        mv $i "${{targets.destdir}}"/opt/jsonnet/grafonnet/$i/
+        if [ -d "$i" ]; then
+          cp -r "$i"/* "${{targets.destdir}}"/opt/jsonnet/grafonnet/
+        fi
       done
 
   - uses: strip
+
+subpackages:
+  - name: ${{package.name}}-bitnami-compat
+    description: "compat package for bitnami/grafonnet library"
+    dependencies:
+      runtime:
+        - grafana-grafonnet
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: grafana-operator
+          version-path: 5/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/grafonnet-lib/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /opt/jsonnet/grafonnet ${{targets.subpkgdir}}/opt/bitnami/grafonnet-lib/grafonnet
+    test:
+      pipeline:
+        - runs: |
+            ls -l /opt/bitnami/grafonnet-lib/grafonnet
 
 update:
   enabled: false
