Split stub-resolv.conf symlink

--- a/systemd.yaml
+++ b/systemd.yaml
@@ -395,13 +395,28 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc ${{targets.subpkgdir}}/usr/sbin
           ln -s ../lib/systemd/systemd ${{targets.subpkgdir}}/usr/sbin/init
-          ln -s ../run/systemd/resolve/stub-resolv.conf "${{targets.subpkgdir}}/etc/resolv.conf"
           echo "uninitialized" > "${{targets.subpkgdir}}/etc/machine-id"
     test:
       pipeline:
         - runs: |
             [ -f /sbin/init -a -x /sbin/init ]
             grep "uninitialized" /etc/machine-id
+
+  - name: "systemd-resolve-stub"
+    description: "Use systemd resolved stub resolver"
+    dependencies:
+      - systemd-init
+    pipeline:
+      - runs: |
+          ln -s ../run/systemd/resolve/stub-resolv.conf "${{targets.subpkgdir}}/etc/resolv.conf"
+
+  - name: "systemd-resolve-direct"
+    description: "Use systemd resolved DNS servers directly"
+    dependencies:
+      - systemd-init
+    pipeline:
+      - runs: |
+          ln -s ../run/systemd/resolve/resolv.conf "${{targets.subpkgdir}}/etc/resolv.conf"
 
   - name: "systemd-default-network"
     description: "Configure network to DHCP on default interfaces"
