--- a/cassandra-5.0.yaml
+++ b/cassandra-5.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: cassandra-5.0
   version: "5.0.3"
-  epoch: 1
+  epoch: 2
   description: Open Source NoSQL Database
   copyright:
     - license: Apache-2.0
@@ -46,9 +46,12 @@ pipeline:
       tag: cassandra-${{package.version}}
 
   - uses: maven/pombump
+    with:
+      patch-file: pombump-deps.yaml
+      pom: ./.build/parent-pom-template.xml
 
   - runs: |
-      ant artifacts -Dversion=${{package.version}}
+      ant -Drat.skip=true artifacts -Dversion=${{package.version}}
 
       # Install cassandra from the tarball in build/dist into the destdir in /usr/share/java/cassandra
       mkdir -p "${{targets.destdir}}"/usr/share/java/cassandra
