--- a/sftp.yaml
+++ b/sftp.yaml
@@ -1,3 +1,4 @@
+#nolint:valid-pipeline-git-checkout-commit,valid-pipeline-git-checkout-tag
 package:
   name: sftp
   version: 0.0.0_git20250224
@@ -59,8 +60,7 @@ test:
         groupadd users || true  # This creates the group if it doesn't exist
         /entrypoint foo:pass:::upload & wait-for-it localhost:22
         netstat -tan | grep ':22'
-    - name: Upload and verify file exists on the remote SFTP server
-      runs: |
+
         apk add sshpass
         echo "test file" > /tmp/test.txt
         sshpass -p "pass" sftp -o StrictHostKeyChecking=no -P 22 foo@127.0.0.1 <<EOF
