--- a/svt-av1.yaml
+++ b/svt-av1.yaml
@@ -43,6 +43,9 @@ subpackages:
   - name: "${{package.name}}-dev"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
