--- a/luajit.yaml
+++ b/luajit.yaml
@@ -1,7 +1,7 @@
 package:
   name: luajit
   version: 2.1_p20210510
-  epoch: 8
+  epoch: 9
   description: OpenResty's branch of LuaJIT
   copyright:
     - license: MIT
@@ -40,6 +40,9 @@ subpackages:
       runtime:
         - luajit
     description: luajit dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: luajit-doc
     description: luajit docs
