--- a/gst-plugins-bad.yaml
+++ b/gst-plugins-bad.yaml
@@ -1,7 +1,7 @@
 package:
   name: gst-plugins-bad
   version: "1.25.1"
-  epoch: 1
+  epoch: 2
   description: GStreamer streaming media framework bad plug-ins
   copyright:
     - license: GPL-2.0-or-later AND LGPL-2.0-or-later
@@ -72,6 +72,9 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: ${{package.name}} dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-doc
     pipeline:
