--- a/fuse2.yaml
+++ b/fuse2.yaml
@@ -1,7 +1,7 @@
 package:
   name: fuse2
   version: 2.9.9
-  epoch: 1
+  epoch: 2
   description: A library that makes it possible to implement a filesystem in a userspace program.
   copyright:
     - license: GPL-2.0-only AND LGPL-2.1-only
@@ -67,6 +67,9 @@ subpackages:
       runtime:
         - fuse-common
     description: fuse dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ${{package.name}}-doc
     pipeline:
