--- a/squid.yaml
+++ b/squid.yaml
@@ -44,7 +44,14 @@ pipeline:
       # Specifically, the tests for kerberos have argc and argv, but don't use them.
       # Enable OpenSSL for SSL Bump functionality (caching https requests)
       # To run it as non-root, we set default user as squid
-      opts: --without-mit-krb5 --without-heimdal-krb5 --with-openssl --enable-ssl-crtd --with-default-user=squid --with-logdir=/var/log/squid
+      opts: |
+        --sbindir=/usr/bin \
+        --without-mit-krb5 \
+        --without-heimdal-krb5 \
+        --with-openssl \
+        --enable-ssl-crtd \
+        --with-default-user=squid \
+        --with-logdir=/var/log/squid
 
   - uses: autoconf/make
 
