varnish - usrmerge usr/sbin
Signed-off-by: Amelia Crate <amelia.crate@chainguard.dev>

--- a/varnish.yaml
+++ b/varnish.yaml
@@ -35,6 +35,8 @@ pipeline:
   - runs: autoreconf -vif
 
   - uses: autoconf/configure
+    with:
+      opts: --sbindir=/usr/bin
 
   - uses: autoconf/make
 
