--- a/gi-docgen.yaml
+++ b/gi-docgen.yaml
@@ -1,7 +1,7 @@
 package:
   name: gi-docgen
   version: "2024.1"
-  epoch: 2
+  epoch: 3
   description: A documentation generator for GObject-based libraries
   copyright:
     - license: Apache-2.0 OR GPL-3.0-or-later
@@ -102,6 +102,7 @@ subpackages:
           packages:
             - python-${{range.key}}
       pipeline:
+        - uses: test/pkgconf
         - uses: python/import
           with:
             python: python${{range.key}}
