--- a/cloud-provider-aws-1.32.yaml
+++ b/cloud-provider-aws-1.32.yaml
@@ -29,7 +29,7 @@ subpackages:
       provides:
         - cloud-provider-aws-cloud-controller-manager=${{package.full-version}}
         # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
-        - cloud-provider-aws-cloud-controller-manager=${{package.full-version}}
+        - ${{package.name}}-cloud-controller-manager-compat=${{package.full-version}}
     pipeline:
       - uses: go/build
         with:
