--- a/contour-1.30.yaml
+++ b/contour-1.30.yaml
@@ -9,7 +9,7 @@ package:
     provides:
       - contour=${{package.full-version}}
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
-      - contour-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 var-transforms:
   - from: ${{package.version}}
