--- a/gitlab-cng-17.8.yaml
+++ b/gitlab-cng-17.8.yaml
@@ -41,6 +41,7 @@ package:
       - gitlab-cng=${{package.full-version}}
       - gitlab=${{package.full-version}}
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - gitlab-container-registry-compat-${{vars.major-minor-version}}
       - gitlab-container-registry-compat=${{package.full-version}}
 
 environment:
