--- a/kafka_exporter.yaml
+++ b/kafka_exporter.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
-      - kafka_exporter-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
