--- a/linkerd2.yaml
+++ b/linkerd2.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
-      - linkerd2-policy-controller-compat=${{package.full-version}}
+      - ${{package.name}}-policy-controller-compat=${{package.full-version}}
 
 environment:
   contents:
