--- a/mountpoint-s3-csi-driver.yaml
+++ b/mountpoint-s3-csi-driver.yaml
@@ -6,7 +6,7 @@ package:
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
-      - mountpoint-s3-csi-driver-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
   copyright:
     - license: Apache-2.0
 
