--- a/sql_exporter.yaml
+++ b/sql_exporter.yaml
@@ -10,7 +10,7 @@ package:
     # This needs to be removed after usrmerge is complete and images
     # are updated to not depend on compat packages.
     provides:
-      - sql_exporter-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
