--- a/aws-s3-controller.yaml
+++ b/aws-s3-controller.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
-      - aws-s3-controller-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
