--- a/distribution.yaml
+++ b/distribution.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
-      - distribution-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 environment:
   contents:
