--- a/grafana-alloy.yaml
+++ b/grafana-alloy.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     provides:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
-      - grafana-alloy-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 environment:
   contents:
