--- a/secrets-store-csi-driver-provider-aws.yaml
+++ b/secrets-store-csi-driver-provider-aws.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
     provides:
-      - secrets-store-csi-driver-provider-aws-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
 
 environment:
   contents:
