--- a/secrets-store-csi-driver-provider-azure.yaml
+++ b/secrets-store-csi-driver-provider-azure.yaml
@@ -8,7 +8,7 @@ package:
   dependencies:
     provides:
       # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
-      - secrets-store-csi-driver-provider-azure-compat=${{package.full-version}}
+      - ${{package.name}}-compat=${{package.full-version}}
     runtime:
       - ca-certificates-bundle
       - tzdata
