--- a/gitlab-pages-17.9.yaml
+++ b/gitlab-pages-17.9.yaml
@@ -8,6 +8,9 @@ package:
   dependencies:
     provides:
       - gitlab-pages=${{package.full-version}}
+      # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+      - gitlab-pages-compat-${{vars.major-minor-version}}
+      - gitlab-pages-compat=${{package.full-version}}
 
 var-transforms:
   - from: ${{package.version}}
@@ -32,26 +35,6 @@ pipeline:
   - runs: |
       mkdir -p ${{targets.contextdir}}/srv/gitlab-pages
       mkdir -p ${{targets.contextdir}}/var/log/gitlab
-
-subpackages:
-  - name: gitlab-pages-compat-${{vars.major-minor-version}}
-    description: Links GitLab pages to bin directory
-    dependencies:
-      provides:
-        - gitlab-pages-compat=${{package.full-version}}
-    pipeline:
-      - runs: |
-          mkdir -p ${{targets.contextdir}}/bin
-          ln -sf /usr/bin/gitlab-pages ${{targets.contextdir}}/bin/gitlab-pages
-    test:
-      environment:
-        contents:
-          packages:
-            - gitlab-pages-${{vars.major-minor-version}}
-      pipeline:
-        - runs: |
-            test -x /bin/gitlab-pages
-            /bin/gitlab-pages --version
 
 update:
   enabled: true
