--- a/gitlab-cng-17.9.yaml
+++ b/gitlab-cng-17.9.yaml
@@ -213,6 +213,9 @@ subpackages:
     dependencies:
       provides:
         - gitlab-container-registry=${{package.full-version}}
+        # REMOVE_POST_USRMERGE - https://github.com/orgs/wolfi-dev/discussions/40270
+        - gitlab-container-registry-compat-${{vars.major-minor-version}}
+        - gitlab-container-registry-compat=${{package.full-version}}
     pipeline:
       - uses: git-checkout
         with:
@@ -294,16 +297,6 @@ subpackages:
 
             # Stop the registry
             kill $PID
-
-  - name: gitlab-container-registry-compat-${{vars.major-minor-version}}
-    dependencies:
-      provides:
-        - gitlab-container-registry-compat=${{package.full-version}}
-    pipeline:
-      - runs: |
-          # https://gitlab.com/gitlab-org/build/CNG/-/blob/master/gitlab-container-registry/scripts/process-wrapper?ref_type=heads#L3
-          mkdir -p "${{targets.contextdir}}"/bin
-          ln -sf /usr/bin/registry "${{targets.contextdir}}"/bin/registry
 
   - name: gitlab-elasticsearch-indexer-${{vars.major-minor-version}}
     description: Elasticsearch indexer for GitLab EE, written in Go
